# insights-host-inventory

./: .baseimagedigest  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .redocly.lint-ignore.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.upstream  Dockerfile_pg_repack  Jenkinsfile  Jenkinsfile-smoke.groovy  Makefile  Pipfile  Pipfile.iqe  Procfile  README.md  USAGE_SUMMARY.md  Untitled  \  add_inventory_view.py  app.sh  arifs_deploy.sh  arifs_dev.yml  artifacts.lock.yaml  assign_ungrouped_hosts_to_groups.py  build_deploy.sh  check_schemas.py  config.py  conftest.py  create_multiple_hosts_mutiple_org_ids.sh  create_ungrouped_host_groups.py  data.json  db.yml  dc_all.yaml  dc_all_svcs.yaml  dc_hbi_with_xjoin.yaml  debug_filter_test.py  debug_outbox_detailed.py  (+100 more)
iqe-host-inventory-plugin/: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.local  README.md  iqe_host_inventory_api_README.md  iqe_host_inventory_api_v7_README.md  mypy.ini  pyproject.toml
iqe-host-inventory-plugin/.claude/: settings.local.json
iqe-host-inventory-plugin/.openapi-generator/: FILES
iqe-host-inventory-plugin/iqe_host_inventory/: __init__.py  deprecations.py  grafted_commands.py  pytest_plugin.py  schemas.py
iqe-host-inventory-plugin/iqe_host_inventory/conf/: .keep  host_inventory.default.yaml  requirements.yaml
iqe-host-inventory-plugin/iqe_host_inventory/data/: api.host_inventory.api.spec.json  api.host_inventory.api_v7.spec.json  start-reaper.yaml  start-stale-host-notification.yaml
iqe-host-inventory-plugin/iqe_host_inventory/fixtures/: api_fixtures.py  cleanup_fixtures.py  db_fixtures.py  exports_fixtures.py  feature_flag_fixtures.py  filter_fixtures.py  groups_fixtures.py  host_views_fixtures.py  identity_fixtures.py  kafka_fixtures.py  kessel_fixtures.py  mq_fixtures.py  rbac_fixtures.py  staleness_fixtures.py  ui_fixtures.py  upload_fixtures.py  user_fixtures.py
iqe-host-inventory-plugin/iqe_host_inventory/modeling/: __init__.py  base_api_wrapper.py  exports_api.py  groups_api.py  host_view_api.py  hosts_api.py  kafka_interaction.py  kessel_relations.py  rbac_api.py  resource_types_api.py  staleness_api.py  system_profile_api.py  tags_api.py  unleash.py  uploads.py  workspaces_api.py  wrappers.py
iqe-host-inventory-plugin/iqe_host_inventory/tests/: conftest.py  test_plugin.py
iqe-host-inventory-plugin/iqe_host_inventory/utils/: __init__.py  api_utils.py  datagen_utils.py  db_utils.py  email_utils.py  kafka_utils.py  notifications_alert.py  notifications_utils.py  rbac_utils.py  retrying.py  staleness_utils.py  tag_utils.py  ui_utils.py  upload_utils.py
iqe-host-inventory-plugin/iqe_host_inventory/views/: __init__.py  custom_staleness.py  inventory_table.py  system_details.py  systems.py  workspaces.py
iqe-host-inventory-plugin/iqe_host_inventory/widgetastic_host_inventory/: __init__.py
iqe-host-inventory-plugin/iqe_host_inventory_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
iqe-host-inventory-plugin/iqe_host_inventory_api/api/: __init__.py  accounts_staleness_api.py  groups_api.py  hosts_api.py  resource_types_api.py  system_profile_api.py  tags_api.py  views_api.py
iqe-host-inventory-plugin/iqe_host_inventory_api/docs/: AccountsStalenessApi.md  ActiveTag.md  ActiveTags.md  ActiveTagsAllOf.md  AdvisorAppData.md  AppSortableFields.md  CanonicalFactsIn.md  CanonicalFactsInAllOf.md  CanonicalFactsOut.md  ComplianceAppData.md  ConsumerApplicationsData.md  CreateCheckIn.md  CreateCheckInAllOf.md  FactSet.md  GroupIn.md  GroupOut.md  GroupOutWithHostCount.md  GroupOutWithHostCountAllOf.md  GroupQueryOutput.md  GroupQueryOutputAllOf.md  GroupsApi.md  HostIdOut.md  HostOut.md  HostOutAllOf.md  HostQueryOutput.md  HostQueryOutputAllOf.md  HostSystemProfileOut.md  HostViewCombinedFields.md  HostViewCombinedFilterValue.md  HostViewFilterComparison.md  HostViewHost.md  HostViewHostAllOf.md  HostViewQueryOutput.md  HostViewQueryOutputAllOf.md  HostsApi.md  MalwareAppData.md  NotFoundErrorResponse.md  PaginationOut.md  PatchAppData.md  PatchHostIn.md  (+67 more)
iqe-host-inventory-plugin/iqe_host_inventory_api/models/: __init__.py  active_tag.py  active_tags.py  active_tags_all_of.py  advisor_app_data.py  app_sortable_fields.py  canonical_facts_in.py  canonical_facts_in_all_of.py  canonical_facts_out.py  compliance_app_data.py  consumer_applications_data.py  create_check_in.py  create_check_in_all_of.py  fact_set.py  group_in.py  group_out.py  group_out_with_host_count.py  group_out_with_host_count_all_of.py  group_query_output.py  group_query_output_all_of.py  host_id_out.py  host_out.py  host_out_all_of.py  host_query_output.py  host_query_output_all_of.py  host_system_profile_out.py  host_view_combined_fields.py  host_view_combined_filter_value.py  host_view_filter_comparison.py  host_view_host.py  host_view_host_all_of.py  host_view_query_output.py  host_view_query_output_all_of.py  malware_app_data.py  not_found_error_response.py  pagination_out.py  patch_app_data.py  patch_host_in.py  per_reporter_staleness.py  remediations_app_data.py  (+61 more)
iqe-host-inventory-plugin/iqe_host_inventory_api_v7/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
iqe-host-inventory-plugin/iqe_host_inventory_api_v7/api/: __init__.py  accounts_staleness_api.py  groups_api.py  hosts_api.py  resource_types_api.py  system_profile_api.py  tags_api.py  views_api.py
iqe-host-inventory-plugin/iqe_host_inventory_api_v7/docs/: AccountsStalenessApi.md  ActiveTag.md  ActiveTags.md  AdvisorAppData.md  AppSortableFields.md  CanonicalFactsIn.md  CanonicalFactsInAllOfBiosUuid.md  CanonicalFactsInAllOfInsightsId.md  CanonicalFactsInAllOfSatelliteId.md  CanonicalFactsInAllOfSubscriptionManagerId.md  CanonicalFactsOut.md  ComplianceAppData.md  ConsumerApplicationsData.md  CreateCheckIn.md  FactSet.md  GroupIn.md  GroupOut.md  (+79 more)
iqe-host-inventory-plugin/scripts/: fix-rbac-type-arg.yaml  hbi_local.sh  kafka_create_topic.py  kcat.yml  postgres_connection_verifier.py  rbac_local.sh  test-day-create-hosts.sh
(+1144 files in other folders)
