[project]
name = "insights-host-inventory"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask==3.1.3",
    "requests~=2.33.1",
    "flask-sqlalchemy~=3.1.1",
    "psycopg2~=2.9.12",
    "flask-migrate~=4.1.0",
    "gunicorn~=26.0.0",
    "connexion[swagger-ui, flask, uvicorn]~=3.3.0",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "pyyaml~=6.0.3",
    "prometheus-client~=0.25.0",
    "logstash-formatter~=0.5.17",
    "marshmallow~=4.3.0",
    "ujson==5.12.1",
    "watchtower>=0.6.0,<4.0.0",
    "boto3~=1.43",
    "prometheus-flask-exporter~=0.23.2",
    "python-dateutil~=2.9.0",
    "prance==25.4.8.0",
    "app-common-python~=0.2.9",
    "sqlalchemy<3.0.0",
    "alembic>=1.12.0",
    "urllib3>=1.26.5",
    "flask-unleash",
    "segment-analytics-python",
    "flask-caching",
    "redis",
    "ratelimit",
    "confluent-kafka==2.14.0",
    "kessel-sdk[auth]~=2.6.0",
    "opentelemetry-api~=1.32",
    "opentelemetry-sdk~=1.32",
    "opentelemetry-exporter-otlp-proto-http~=1.32",
    "opentelemetry-instrumentation-flask~=0.53b",
    "opentelemetry-instrumentation-sqlalchemy~=0.53b",
    "opentelemetry-instrumentation-requests~=0.53b",
    "unleashclient==6.7.0",
    "rpds-py==0.30.0",
]

[tool.ruff]
target-version = "py312"
line-length = 119
lint.select = [
  # flake8-unused-arguments
  "ARG",
  # flake8-bugbear
  "B",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # pyupgrade
  "UP",
  # pycodestyle warnings
  "W",
]
lint.ignore = [
  "SIM117", # merge stacked with statements
  "SIM118", # replace dict.keys iteration with dictkeys set operations
]
lint.per-file-ignores."lib/host_remove_duplicates.py" = [ "B023" ]
lint.extend-safe-fixes = [
  "UP006", # Use tuple, list, etc. instead of typing.Tuple, typing.List in type annotations
  "UP031", # Use f-string instead of percent format
]
lint.flake8-unused-arguments.ignore-variadic-names = true
lint.isort.force-single-line = true

[dependency-groups]
dev = [
    "pytest~=9.0.3",
    "pytest-cov~=7.1.0",
    "pytest-mock~=3.15.1",
    "pytest-subtests~=0.15.0",
    "coverage",
    "pre-commit~=4.6.0",
    "sqlalchemy-utils==0.42.1",
    "pgxnclient",
    "ruff",
    "mypy",
    "honcho",
    "types-ujson",
    "types-redis",
    "types-pyyaml",
    "types-python-dateutil",
    "types-requests",
    "types-pytz",
    "tabulate",
    "faker",
]

[tool.mypy]
python_version = "3.12"
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Getting these passing should be easy
strict_equality = true
extra_checks = true
# Strongly recommend enabling this one as soon as you can
# check_untyped_defs = true
# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
# disallow_subclassing_any = true
# disallow_untyped_decorators = true
# disallow_any_generics = true
# These next few are various gradations of forcing use of type annotations
# disallow_untyped_calls = true
# disallow_incomplete_defs = true
# disallow_untyped_defs = true
# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true
# This one can be tricky to get passing if you use a lot of untyped libraries
# warn_return_any = true

# When everything above is enabled, it is equivalent to --strict, so we can switch to:
# strict = true

[[tool.mypy.overrides]]
# missing in the stub
module = [ "requests.packages.urllib3.*" ]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tabulate"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Generated API code in IQE plugin
module = [
  "iqe_host_inventory_api",
  "iqe_host_inventory_api.*",
  "iqe_host_inventory_api_v7",
  "iqe_host_inventory_api_v7.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
# IQE files that import from generated API modules (attr-defined errors)
# TODO: Stop ignoring mypy errors on IQE: https://issues.redhat.com/browse/RHINENG-22478
module = [
  "iqe_host_inventory.schemas",
  "iqe_host_inventory.pytest_plugin",
  "iqe_host_inventory.utils.tag_utils",
  "iqe_host_inventory.utils.api_utils",
  "iqe_host_inventory.utils.staleness_utils",
  "iqe_host_inventory.utils.notifications_utils",
  "iqe_host_inventory.modeling.*",
  "iqe_host_inventory.fixtures.*",
  "iqe_host_inventory.tests.rest.*",
]
ignore_errors = true

[tool.uv]
package = false
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
